--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "keywords": [],
+  "keywords": [
+    "base64 to image url",
+    "image url from base64",
+    "image url generator from base64"
+  ],
   "author": "Shamim hasnain <hasnainbauet@gmail.com>",
   "license": "MIT",
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  },
+  "bugs": "https://github.com/shadid06/base64-to-image-url/issues",
+  "homepage": "https://github.com/shadid06/base64-to-image-url#readme"
+ 
 }
